projects/kit/components/multi-select/multi-select.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';

:host {
    position: relative;
    display: block;
    border-radius: var(--tui-radius-m);

    &._disabled {
        pointer-events: none;
    }
}

.t-hosted {
    display: block;
    border-radius: inherit;
}

.t-input {
    border-radius: inherit;

    :host:not(._editable):not(._readonly) & {
        cursor: pointer;
    }
}

.t-content {
    display: flex;
    align-items: center;
    pointer-events: none;
    box-sizing: border-box;
}

.t-primitive {
    .text-overflow();
}

.t-arrow {
    pointer-events: auto;
    cursor: pointer;

    &_native-dropdown {
        pointer-events: none;
    }
}

